--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" type="text/css" href="resources/css/custom.css">
 	<link rel="stylesheet" type="text/css" href="resources/css/tab.css">
 	<link rel="stylesheet" type="text/css" href="resources/css/loader.css">
+	<link rel="stylesheet" type="text/css" href="resources/css/font.css">
 	<!-- <script src="resources/js/fulltab.js"></script> -->
 	<!-- icons -->
 	<script src="https://kit.fontawesome.com/8a62195d8d.js" crossorigin="anonymous"></script>
@@ -34,7 +35,7 @@
 							<div class="card">
 							<center>
 				<div class="card-header bg-light text-dark" id="avatar"><img src="resources/img/avatar-2.png"></div>
-				<div class="card-body">Carlo Cruz</div>
+				<div class="card-body"> Carlo Cruz</div>
 				<div class="card-body">QA/Freelance Developer</div><hr>
 				<div class="card-body">carlo.cruz0215@gmail.com</div>
 				<div class="card-body">09094922611</div>
@@ -52,14 +53,14 @@
 						<button class="tablinks" onclick="openCity(event, 'Portfolio')">Portfolio</button>
 
 					  </div>
-					  
+					  <div class="content"> 
 					  <div id="About" class="tabcontent">
-						<h3>Hi</h3>
+						<h1>Hi, I'm Carlo S. Cruz </h1>
 						<p><span class="emojis">👋</span></p>
 					  </div>
 					  
 					  <div id="Resume" class="tabcontent">
-						<h3>Hi</h3>
+						<h5>Hi</h5>
 						<p></p> 
 					  </div>
 					  <div id="Contact" class="tabcontent">
@@ -88,7 +89,7 @@
 
 
 	</div>
-			
+</div>			
 <script type="text/javascript">
 	// loader 
 		window.addEventListener("load", () => {
