--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 				<div class="card-footer">
 					<a href="mailto:carlo.cruz0215@gmail.com"><i class ="icon fa fa-envelope" ></i></a>
 	
-					<a href="tel:09094922611"><i class ="icon fa fa-phone" ></i></a>
-					<a href="https://www.facebook.com/carlo.cruz0311/"><i class ="icon fa fa-facebook" ></i></a>
-					<a href="https://twitter.com/sirloy_"><i class ="icon fa fa-twitter" ></i></a>
-					<a href="https://github.com/Sirloy00"><i class ="icon fa fa-github" ></i></a>
+					<a href="tel:09094922611"><i class ="icon fa fa-phone"target="_blank" ></i></a>
+					<a href="https://www.facebook.com/carlo.cruz0311/" target="_blank"><i class ="icon fa fa-facebook" ></i></a>
+					<a href="https://twitter.com/sirloy_" target="_blank"><i class ="icon fa fa-twitter" ></i></a>
+					<a href="https://github.com/Sirloy00"target="_blank"><i class ="icon fa fa-github" ></i></a>
 				
 				</div>
 			</div>			
